# oviedo-rc-locator

./: .env  .gitignore  .validator.env  API.md  LICENSE  README.md  pyproject.toml
data/: calibration_fichas.json  calibration_offsets.bak.v6_before_lg.json  calibration_offsets.json  calibrations.json  snap_labels.json  snu_grid.json  validator_labels.json  validator_labels_fichas.json
experiments/body_rect/: .gitignore  README.md  _setup.py  analyze_via_labels.py  annotator.py  bench_annotator.py  body_detect.py  build_templates.py  sample_candidates.py  scan_fallback.py
scripts/: build_coords_cache.py  build_priority_rcs.py  fetch_ambitos_oviedo.py  fetch_fichas.py  fetch_gijon_fichas.py  fetch_gijon_kml.py  fetch_snu.py  lg_batch.py  parse_gijon_fichas.py  parse_oviedo_fichas.py  prefetch.py  prefetch_wms.py  recal_watcher.py  recalibrate.py  recalibrate_fichas.py  stress_test.py  validate_snap.py  vision_bench.py
scripts/distributed/: dnprc_worker.py  dnprc_worker_sni.py
service/: locator_api.py  refine_lg.py  validator_ui.py
service/validator/: env.py  labels.py  recal.py  routes.py
src/oviedo_rc/: __init__.py  calibration.py  catastro.py  cli.py  concejo.py  config.py  (+15 more)
tests/: golden_geom.json  test_calibration_reload.py  test_calibrations.py  test_concejo_routing.py  test_format.py  test_geom_regression.py  test_pdf_parsers.py  test_planeamiento.py  test_rc_validation.py  test_snu_grid.py
web/: README.md  _compat.py  gen_candidates.py  gen_parcel_set.py  gen_quality_set.py  gen_test_set.py  parcel_set.json  quality_set.json  server.py  test_set.json
(+5 files in other folders)
